--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    hola soy ale
+    <nav>
+        <ul>
+            <li><a href=""></a>Sobre nosotros</li>
+            <li><a href="">Tipos de eventos</a></li>
+            <li><a href="">Tarifas de eventos</a></li>
+            <li><a href="">Contacto</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
